{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 318,
  "lineage": "4b7f7f80-4dbd-0329-dc75-7a9e920f38f0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "database_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:224574409629:instance/i-0d6b864970e9250c6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d6b864970e9250c6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops-assignment-4",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08d93ad483ef1844a",
            "private_dns": "ip-10-0-3-83.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.83",
            "public_ip": "34.200.230.41",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-010880c62e5dfcc8a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08e9095eba0d54ffa",
            "tags": {
              "Name": "DataBase"
            },
            "tags_all": {
              "Name": "DataBase"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-066ca7c5010150493"
            ]
          },
          "dependencies": [
            "aws_key_pair.keypair",
            "aws_security_group.devops_assignment_4_sg",
            "aws_subnet.private_1",
            "aws_vpc.devops_assignment_4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:224574409629:instance/i-05132b642191eaa5d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05132b642191eaa5d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops-assignment-4",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06f2b2d26a0dbbb84",
            "private_dns": "ip-10-0-1-60.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.60",
            "public_ip": "44.213.90.23",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0be75111ea50a3ba2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03bc8003046edae0d",
            "tags": {
              "Name": "Web_Server"
            },
            "tags_all": {
              "Name": "Web_Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-066ca7c5010150493"
            ]
          },
          "dependencies": [
            "aws_key_pair.keypair",
            "aws_security_group.devops_assignment_4_sg",
            "aws_subnet.public_1",
            "aws_vpc.devops_assignment_4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "devops_assignment_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224574409629:internet-gateway/igw-0b0ebcd7b84a27d9b",
            "id": "igw-0b0ebcd7b84a27d9b",
            "owner_id": "224574409629",
            "tags": {
              "Name": "devops-assignment-4-internet-gateway"
            },
            "tags_all": {
              "Name": "devops-assignment-4-internet-gateway"
            },
            "vpc_id": "vpc-0edbda18bbe0e36cc"
          },
          "dependencies": [
            "aws_vpc.devops_assignment_4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224574409629:route-table/rtb-03ae538db6361258f",
            "id": "rtb-03ae538db6361258f",
            "owner_id": "224574409629",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b0ebcd7b84a27d9b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-assignment-4-private-route-table"
            },
            "tags_all": {
              "Name": "devops-assignment-4-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0edbda18bbe0e36cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.devops_assignment_4",
            "aws_vpc.devops_assignment_4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080882a059735f9f2",
            "route_table_id": "rtb-03ae538db6361258f",
            "subnet_id": "subnet-03bc8003046edae0d"
          },
          "dependencies": [
            "aws_internet_gateway.devops_assignment_4",
            "aws_route_table.public_route_table",
            "aws_subnet.public_1",
            "aws_vpc.devops_assignment_4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b446543e428f682",
            "route_table_id": "rtb-03ae538db6361258f",
            "subnet_id": "subnet-0ae5a8abe1cd53a44"
          },
          "dependencies": [
            "aws_internet_gateway.devops_assignment_4",
            "aws_route_table.public_route_table",
            "aws_subnet.public_2",
            "aws_vpc.devops_assignment_4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops_assignment_4_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224574409629:security-group/sg-066ca7c5010150493",
            "description": "Security group for devops assignment 4",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-066ca7c5010150493",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "devops-assignment-4-sg",
            "name_prefix": "",
            "owner_id": "224574409629",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-assignment-4-sg"
            },
            "tags_all": {
              "Name": "devops-assignment-4-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0edbda18bbe0e36cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devops_assignment_4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224574409629:subnet/subnet-08e9095eba0d54ffa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e9095eba0d54ffa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "224574409629",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cs423-devops-private-1"
            },
            "tags_all": {
              "Name": "cs423-devops-private-1"
            },
            "vpc_id": "vpc-0edbda18bbe0e36cc"
          },
          "dependencies": [
            "aws_vpc.devops_assignment_4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224574409629:subnet/subnet-0577c25d29bf947b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0577c25d29bf947b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "224574409629",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cs423-devops-private-2"
            },
            "tags_all": {
              "Name": "cs423-devops-private-2"
            },
            "vpc_id": "vpc-0edbda18bbe0e36cc"
          },
          "dependencies": [
            "aws_vpc.devops_assignment_4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224574409629:subnet/subnet-03bc8003046edae0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03bc8003046edae0d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "224574409629",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cs423-devops-public-1"
            },
            "tags_all": {
              "Name": "cs423-devops-public-1"
            },
            "vpc_id": "vpc-0edbda18bbe0e36cc"
          },
          "dependencies": [
            "aws_vpc.devops_assignment_4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224574409629:subnet/subnet-0ae5a8abe1cd53a44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae5a8abe1cd53a44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "224574409629",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cs423-devops-public-2"
            },
            "tags_all": {
              "Name": "cs423-devops-public-2"
            },
            "vpc_id": "vpc-0edbda18bbe0e36cc"
          },
          "dependencies": [
            "aws_vpc.devops_assignment_4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devops_assignment_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:224574409629:vpc/vpc-0edbda18bbe0e36cc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01bd57b620dcd412a",
            "default_route_table_id": "rtb-03d007a439a43007d",
            "default_security_group_id": "sg-01c44c36fd0adcbe1",
            "dhcp_options_id": "dopt-0236376cc6c0e4219",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0edbda18bbe0e36cc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03d007a439a43007d",
            "owner_id": "224574409629",
            "tags": {
              "Name": "devops-assignment-4"
            },
            "tags_all": {
              "Name": "devops-assignment-4"
            }
          }
        }
      ]
    }
  ]
}